# nbv_3d_prob_cnn

./: README.md
nbv_3d_cnn/: CMakeLists.txt  package.xml
nbv_3d_cnn/cmake/: generate_test_dataset_cl.cmake
nbv_3d_cnn/include/nbv_3d_cnn/: generate_single_image.h  generate_test_dataset_opencl.h  origin_visibility.h  simulate_nbv_cycle_adapter.h  voxelgrid.h
nbv_3d_cnn/launch/: augment_test_dataset_3d.launch  augment_test_dataset_3d_realistic.launch  generate_3d_scenes.launch  generate_3d_scenes_realistic.launch  generate_test_dataset.launch  generate_test_dataset_3d.launch  generate_test_dataset_3d_realistic.launch  simulate_nbv_cycle.launch  simulate_nbv_cycle_3d.launch  simulate_nbv_cycle_3d_realistic.launch  train_2d.launch  train_3d.launch  train_3d_realistic.launch
nbv_3d_cnn/scripts/: inria_dataset.py  nbv_2d_model.py  nbv_3d_cnn_generate.py  nbv_3d_cnn_predict.py  nbv_3d_model.py  scene_3d_dataset.py
nbv_3d_cnn/src/: augment_test_dataset.cpp  augment_test_dataset.h  binvoxelgrid_to_voxelgrid.cpp  generate_3d_scenes.cpp  generate_3d_scenes.h  generate_3d_scenes_realistic.cpp  generate_3d_scenes_realistic.h  generate_single_image.cpp  generate_single_image.h  generate_test_dataset.cl  generate_test_dataset.cpp  generate_test_dataset.h  generate_test_dataset_opencl.cpp  generate_test_dataset_opencl.h  merge_logs.cpp  merge_logs.h  origin_visibility.cpp  origin_visibility.h  origin_visibility_ocl.cpp  simulate_nbv_cycle.cpp  simulate_nbv_cycle.h  simulate_nbv_cycle_adapter.cpp  simulate_nbv_cycle_adapter.h  test_visibility_matrix.cpp  voxelgrid.cpp  voxelgrid.h  voxelgrid_to_binvoxelgrid.cpp  voxelgrid_to_octomap.cpp  voxelgrid_visualization.cpp  voxelgrid_visualization.h
nbv_3d_cnn_msgs/: CMakeLists.txt  package.xml
nbv_3d_cnn_msgs/action/: Predict.action  Predict3d.action
