<?xml version="1.0"?>
<package format="2">
  <name>nbv_3d_cnn</name>
  <version>0.0.0</version>
  <description>The nbv_3d_cnn package</description>

  <maintainer email="rimlab@todo.todo">rimlab</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <depend>cv_bridge</depend>
  <depend>actionlib</depend>
  <depend>sensor_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>std_msgs</depend>

  <export>

  </export>
</package>
