<?xml version="1.0"?>
<package format="2">
  <name>nbv_3d_cnn_msgs</name>
  <version>0.0.0</version>
  <description>The nbv_3d_cnn_msgs package</description>

  <maintainer email="rimlab@todo.todo">rimlab</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>sensor_msgs</depend>

  <export>
    
  </export>
</package>
